# raylib_cmake_template

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  generate_android_commands.ps1  generate_android_commands.sh  generate_commands.sh  generate_compile_commands.sh  update_clangd.ps1  update_clangd.sh
.github/workflows/: build.yaml
include/: raylib.h  test.h
include/raymob/: raymob.h
raymob/: CMakePresets.json  gradle.properties
raymob/app/: build.gradle
raymob/app/src/main/cpp/: CMakeLists.txt
src/: main.cpp
